--- a/src/index.html
+++ b/src/index.html
@@ -404,7 +404,7 @@
         </p>
       </div>
       <div>
-        <img src="./img/MinhaFotoRonan.png" alt="Minha Foto" class="max-h-40 rounded-full border-2 border-verde-900 hover:scale-105 transition-transform duration-300" onerror="this.src='https://via.placeholder.com/160'">
+        <img src="./img/MinhaFotoRonan.png" alt="Minha Foto" class="max-h-40 rounded-full border-2 border-verde-900 hover:scale-105 transition-transform duration-300">
       </div>
     </div>
 
