--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
         <div>
           <p class="uppercase mb-2">Recomendado por</p>
           <p class="flex items-center gap-4">
-            <img class="w-28" src="./img/parceiros/wildbeast.svg" alt="Wildbeast" />
+            <img class="w-28" src="./img/wildbeast.svg" alt="Wildbeast" />
             <span>|</span>
             Revista Nacional
           </p>
