--- a/src/index.html
+++ b/src/index.html
@@ -398,7 +398,7 @@
   <section class="container mb-12 sm:mb-16">
     <div class="flex flex-col items-center justify-center py-4 max-sm:divide-y-2 max-sm:divide-verde-900 *:p-4 sm:flex-row sm:gap-8 sm:border-b-2 sm:border-t-2 sm:border-verde-900 sm:py-8">
       <div class="text-left mx-auto sm:text-left">
-        <h2 class="font-serif text-4xl text-verde-300 mb-4">Sobre Mim</h2>
+        <h2 class="font-serif text-4xl text-verde-300 mb-4">Sobre o Dev</h2>
         <p class="mt-4 max-w-2xl text-gray-300">
           Desenvolvedor Front-end e Games VR com experiência em HTML, CSS, JavaScript, React, C# e desenvolvimento de aplicações web e jogos imersivos. Desenvolvi um mini game em AR para a empresa de bebidas Fiufiu, combinando tecnologia e interatividade. Atualmente, estou aprimorando minhas habilidades em React para criar interfaces mais dinâmicas e eficientes. Apaixonado por tecnologia, interfaces interativas e experiências imersivas. Cursando Análise e Desenvolvimento de Sistemas.
         </p>
