--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="img/favicon.svg" type="image/png" />
+  <link rel="icon" href="src/img/favicon.svg" type="image/png" />
   <title>Forest</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text&display=swap" rel="stylesheet" />
-  <link href="./output.css" rel="stylesheet" />
+  <link href="src/output.css" rel="stylesheet" />
 </head>
 
 <body class="bg-verde-800 font-sans">
@@ -27,7 +27,7 @@
 
   <header class="container flex items-center justify-between gap-8 py-8">
     <a href="./">
-      <img src="./img/forest.svg" alt="Forest" />
+      <img src="src/img/forest.svg" alt="Forest" />
     </a>
     <nav id="mobile-menu" class="lg:block hidden items-center z-40 max-lg:fixed max-lg:w-full max-lg:inset-0">
       <div class="fixed lg:hidden inset-0 bg-verde-950/40 backdrop-blur-md"></div>
@@ -65,10 +65,10 @@
           alt=""
         /> -->
       <!-- autoplay -->
-      <video id="video" class="absolute inset-0 size-full object-cover -z-10 animate-fade-in" muted autoplay playsinline loop width="1280" height="720" src="./img/video_chuva.mp4"></video>
+      <video id="video" class="absolute inset-0 size-full object-cover -z-10 animate-fade-in" muted autoplay playsinline loop width="1280" height="720" src="src/img/video_chuva.mp4"></video>
       <div class="bg-verde-950/60 rounded-xl flex flex-nowrap items-start gap-2 p-4 mb-8 sm:gap-8 sm:items-center sm:py-1 sm:pl-4 sm:pr-1 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:rounded-full">vagas para dezembro abertas
         <a class="btn inline-flex items-center gap-2" href="#contato">Reserve Hoje
-          <img src="./img/seta.svg" alt="" />
+          <img src="src/img/seta.svg" alt="" />
         </a>
       </div>
       <h1 class="mb-8 font-serif text-balance max-w-screen-sm text-4xl sm:mb-20 sm:text-5xl">
@@ -82,7 +82,7 @@
         <div>
           <p class="uppercase mb-2">Recomendado por</p>
           <p class="flex items-center gap-4">
-            <img class="w-28" src="./img/wildbeast.svg" alt="Wildbeast" />
+            <img class="w-28" src="src/img/wildbeast.svg" alt="Wildbeast" />
             <span>|</span>
             Revista Nacional
           </p>
@@ -123,15 +123,15 @@
     </div>
     <div class="grid gap-4 sm:gap-8 grid-cols-[2fr_1fr]">
       <div class="col-span-full grid *:col-start-1 *:row-start-1">
-        <img class="h-52 w-full object-cover rounded-xl" src="./img/casa1.jpg" alt="Casa 1" />
+        <img class="h-52 w-full object-cover rounded-xl" src="src/img/casa1.jpg" alt="Casa 1" />
         <span class="m-2 self-start justify-self-end uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none">Ruby</span>
       </div>
       <div class="grid *:col-start-1 *:row-start-1">
-        <img class="size-full object-cover rounded-xl" src="./img/casa2.jpg" alt="Casa 2" />
+        <img class="size-full object-cover rounded-xl" src="src/img/casa2.jpg" alt="Casa 2" />
         <span class="m-2 self-start justify-self-end uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none">Emerald</span>
       </div>
       <div class="grid *:col-start-1 *:row-start-1">
-        <img class="size-full object-cover rounded-xl" src="./img/casa3.jpg" alt="Casa 3" />
+        <img class="size-full object-cover rounded-xl" src="src/img/casa3.jpg" alt="Casa 3" />
         <span class="m-2 self-start justify-self-end uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none">Saphire</span>
       </div>
     </div>
@@ -243,19 +243,19 @@
     </div>
     <div class="grid grid-cols-2 gap-4">
       <div class="group relative cursor-pointer overflow-hidden rounded-xl">
-        <img class="size-full object-cover transition-transform group-hover:scale-110" src="./img/canoagem.jpg" alt="canoagem" />
+        <img class="size-full object-cover transition-transform group-hover:scale-110" src="src/img/canoagem.jpg" alt="canoagem" />
         <div class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 transition-opacity group-hover:opacity-100">
           <span class="text-white">Canoagem</span>
         </div>
       </div>
       <div class="group row-span-2 relative cursor-pointer overflow-hidden rounded-xl">
-        <img class="size-full object-cover transition-transform group-hover:scale-110" src="./img/observacao-noturna.jpg" alt="Observação Noturna" />
+        <img class="size-full object-cover transition-transform group-hover:scale-110" src="src/img/observacao-noturna.jpg" alt="Observação Noturna" />
         <div class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 transition-opacity group-hover:opacity-100">
           <span class="text-white">Observação Noturna</span>
         </div>
       </div>
       <div class="group relative cursor-pointer overflow-hidden rounded-xl">
-        <img class="size-full object-cover transition-transform group-hover:scale-110" src="./img/vida-selvagem.jpg" alt="Vida Selvagem" />
+        <img class="size-full object-cover transition-transform group-hover:scale-110" src="src/img/vida-selvagem.jpg" alt="Vida Selvagem" />
         <div class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 transition-opacity group-hover:opacity-100">
           <span class="text-white">Vida Selvagem</span>
         </div>
@@ -275,7 +275,7 @@
     <div class="flex flex-col gap-4 sm:flex-row sm:gap-8">
       <div class="grid flex-1 gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl transition-transform sm:hover:-translate-y-2">
         <div class="neon size-10 flex items-center justify-center">
-          <img src="./img/manha.svg" alt="" />
+          <img src="src/img/manha.svg" alt="" />
         </div>
         <h3 class="font-serif text-2xl text-white">Amanhecer</h3>
         <p class="text-gray-400">
@@ -286,7 +286,7 @@
       </div>
       <div class="grid flex-1 gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl transition-transform sm:translate-y-12 sm:hover:translate-y-10">
         <div class="neon size-10 flex items-center justify-center">
-          <img src="./img/dia.svg" alt="" />
+          <img src="src/img/dia.svg" alt="" />
         </div>
         <h3 class="font-serif text-2xl text-white">Meio-dia</h3>
         <p class="text-gray-400">
@@ -297,7 +297,7 @@
       </div>
       <div class="grid flex-1 gap-4 bg-verde-900 p-6 sm:p-8 rounded-xl transition-transform sm:hover:-translate-y-2">
         <div class="neon size-10 flex items-center justify-center">
-          <img src="./img/noite.svg" alt="" />
+          <img src="src/img/noite.svg" alt="" />
         </div>
         <h3 class="font-serif text-2xl text-white">Anoitecer</h3>
         <p class="text-gray-400">
@@ -380,7 +380,7 @@
         </div>
       </div>
       <div class="lg:justify-self-end">
-        <img class="mb-4" src="./img/forest.svg" alt="Forest" />
+        <img class="mb-4" src="src/img/forest.svg" alt="Forest" />
         <p class="text-gray-400">Conecte-se com a natureza</p>
       </div>
     </div>
@@ -404,7 +404,7 @@
         </p>
       </div>
       <div>
-        <img src="./img/MinhaFotoRonan.png" alt="Minha Foto" class="max-h-40 rounded-full border-2 border-verde-900 hover:scale-105 transition-transform duration-300">
+        <img src="src/img/MinhaFotoRonan.png" alt="Minha Foto" class="max-h-40 rounded-full border-2 border-verde-900 hover:scale-105 transition-transform duration-300">
       </div>
     </div>
 
@@ -449,7 +449,7 @@
       })
       .replace('-feira', '');
 
-    video.src = random < 25 ? `./img/video_chuva.mp4` : `./img/video_sol.mp4`;
+    video.src = random < 25 ? `src/img/video_chuva.mp4` : `src/img/video_sol.mp4`;
 
     const mobileButton = document.getElementById('mobile-button');
     const mobileMenu = document.getElementById('mobile-menu');
