Atualizando index.html com novas modificações

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text&display=swap" rel="stylesheet" />
   <link href="src/output.css" rel="stylesheet" />
+
 </head>
 
 <body class="bg-verde-800 font-sans">
@@ -66,7 +67,7 @@
         /> -->
       <!-- autoplay -->
       <video id="video" class="absolute inset-0 size-full object-cover -z-10 animate-fade-in" muted autoplay playsinline loop width="1280" height="720" src="src/img/video_chuva.mp4"></video>
-      <div class="bg-verde-950/60 rounded-xl flex flex-nowrap items-start gap-2 p-4 mb-8 sm:gap-8 sm:items-center sm:py-1 sm:pl-4 sm:pr-1 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:rounded-full">vagas para dezembro abertas
+      <div class="bg-verde-950/60 rounded-xl flex flex-col items-start gap-2 p-4 mb-8 sm:gap-8 sm:items-center sm:py-1 sm:pl-4 sm:pr-1 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:rounded-full">Vagas para dezembro abertas
         <a class="btn inline-flex items-center gap-2" href="#contato">Reserve Hoje
           <img src="src/img/seta.svg" alt="" />
         </a>
