tirei a ex em react

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       <div class="text-left mx-auto sm:text-left">
         <h2 class="font-serif text-4xl text-verde-300 mb-4">Sobre o Dev</h2>
         <p class="mt-4 max-w-2xl text-gray-300">
-          Desenvolvedor Front-end e Games VR com experiência em HTML, CSS, JavaScript, React, C# e desenvolvimento de aplicações web e jogos imersivos. Desenvolvi um mini game em AR para a empresa de bebidas Fiufiu, combinando tecnologia e interatividade. Atualmente, estou aprimorando minhas habilidades em React para criar interfaces mais dinâmicas e eficientes. Apaixonado por tecnologia, interfaces interativas e experiências imersivas. Cursando Análise e Desenvolvimento de Sistemas.
+          Desenvolvedor Front-end e Games VR com experiência em HTML, CSS, JavaScript, C# e desenvolvimento de aplicações web e jogos imersivos. Desenvolvi um mini game em AR para a empresa de bebidas Fiufiu, combinando tecnologia e interatividade. Atualmente, estou aprimorando minhas habilidades em React para criar interfaces mais dinâmicas e eficientes. Apaixonado por tecnologia, interfaces interativas e experiências imersivas. Cursando Análise e Desenvolvimento de Sistemas.
         </p>
       </div>
       <div>
